Mejoramos el header con respecto a la navbar

--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -27,17 +27,17 @@ p {
 
 .contenido-header .texto {
     background-image: linear-gradient(-225deg, #08f9b1 0%, #f10cc4 100%);
-    width:calc(100vw - 20px);
+    width:100%;
     height: 20vh;
     font-size: 90px;
     font-weight: 400;
     font-family: 'noto serif', serif;
-    font-style: italic;
     display: flex;
     align-items: center;
     justify-content: center;
     color: var(--purple-medium);
     mix-blend-mode: multiply;
+    margin-bottom: 0;
 }
 
 /* ------------------------- */
@@ -48,8 +48,7 @@ p {
     background-color: var(--purple-medium);
     width: 100%;
     position: sticky;
-    top: 0;
-    padding: 5px;
+    margin-top: 0;
 	z-index: 999;
 	text-align: center;
 	display: flex;
